reponsive code with media query

--- a/position.html
+++ b/position.html
@@ -28,6 +28,11 @@
             #fourth{
                 background-color: pink;
             }
+            @media screen and(max-width:1200px) {
+                header{
+                    background-color: ;
+                }
+            }
         </style>
     </head>
     <body>
